--- a/ansible-apim-4.1.0.1/roles/apim/templates/carbon-home/repository/conf/deployment.toml.j2
+++ b/ansible-apim-4.1.0.1/roles/apim/templates/carbon-home/repository/conf/deployment.toml.j2
@@ -170,6 +170,7 @@ url = "{{ api_devportal_url }}"
 #default_reserved_username = "apim_reserved_user"
 
 [apim.cors]
+enable = "{{ cors_enabled }}"
 allow_origins = "*"
 allow_methods = ["GET","PUT","POST","DELETE","PATCH","OPTIONS"]
 allow_headers = ["authorization","Access-Control-Allow-Origin","Content-Type","SOAPAction","apikey","Internal-Key"]
